Published version 1.25.0